@@ -34,6 +34,9 @@
 - CHG: Merge dialog: if the 'use from url' is activated, the 'show log'
        button is disabled for the 'to' url too. (Stefan)
 - CHG: The "diff" context menu is now shown for conflicted files too. (Stefan)
+- CHG: In the repository browser, when a different revision than HEAD is
+       set and the revision button is pressed, the set revision is pre-filled
+       in the revision selection dialog instead of HEAD. (Stefan)
 - BUG: Crash in TSVNCache. See issue #91.
 - BUG: File context menu shown if more than one folder was
        selected. See issue #92.
@@ -73,6 +76,7 @@
        explorer were locked - even those unchecked in the lock dialog. (Stefan)
 - BUG: The status control showed the menus "Get Lock", "Compare with WC" and
        "unified diff" for added, deleted and missing items too. (Stefan)
+- BUG: Some characters weren't properly escaped to create a valid URL. (Stefan)
 
 Version 1.2
 
